# fwie

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/commands/: decode.rs  encode.rs
