[package]
name = "image-encoding"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
flate2 = { version = "1.1.2", features = ["zlib-rs"] }
imageproc = "0.25.0"
reed-solomon = { version = "0.2.1" }
image = "0.25.8"
indicatif = "0.18.0"

[profile.release]
lto = true
panic = 'abort'
overflow-checks = false
debug-assertions = false
incremental = false
rpath = false
codegen-units = 1
strip = true
